# test2

LoomoRos/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
LoomoRos/catkin_ws/devel/lib/pkgconfig/: loomo_description.pc  loomo_navigation.pc  loomo_slam.pc  loomo_teleop.pc  rplidar_ros.pc
LoomoRos/catkin_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
LoomoRos/catkin_ws/src/loomo_description/: CMakeLists.txt
LoomoRos/catkin_ws/src/loomo_description/config/: joint_names_loomo_description.yaml
LoomoRos/catkin_ws/src/loomo_description/launch/: display.launch  gazebo.launch  loomo_remote.launch
LoomoRos/catkin_ws/src/loomo_description/meshes/: base_center_ground_frame.STL  base_link.STL  head_center_neck_pitch_frame.STL  left_wheel_frame.STL  neck_center_body_internal_frame.STL  neck_center_body_yaw_frame.STL  platform_center_head_fix_frame.STL  right_wheel_frame.STL  rsdepth_center_neck_fix_frame.STL
LoomoRos/catkin_ws/src/loomo_description/urdf/: loomo_description.csv  loomo_description.urdf
LoomoRos/catkin_ws/src/loomo_navigation/: CMakeLists.txt
LoomoRos/catkin_ws/src/loomo_navigation/config/: costmap_common_params.yaml  (+2 more)
LoomoRos/catkin_ws/src/loomo_slam/: CMakeLists.txt  package.xml
LoomoRos/catkin_ws/src/loomo_teleop/: CMakeLists.txt  package.xml
LoomoRos/catkin_ws/src/loomo_teleop/launch/: loomo_teleop_key.launch
LoomoRos/catkin_ws/src/loomo_teleop/nodes/: loomo_teleop_key
Rplidar/catkin_ws/devel/: .catkin
XBoxRos/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
XBoxRos/catkin_ws/src/xbox_control/: CMakeLists.txt
(+25 files in other folders)
